welcome.lessons.welcome.loopdowhile.Poucet1.scala.error
Poucet:2: error: not found: value sortietrouvee
while(!sortietrouvee){
       ^Poucet:5: error: type mismatch;
 found   : Unit
 required: Boolean
  if (nbBiscuit=3)
               ^