welcome.lessons.welcome.loopdowhile.Poucet1.scala.code
var nbBiscuit = 0
while(!sortietrouvee){
  for (nbpas <- 0 to 5){
  avance()
  if (nbBiscuit=3)
  	gauche()
  else
    droite()
  }
}